[package]
name = "turbin-3-prereq-sdk"
version = "0.1.0"
description = "Created with IDLGen"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "turbin_3_prereq_sdk"

[features]
rpc = []
i11n = ["anchor-i11n"]
cpi = []
events = []
default = ["rpc", "i11n", "cpi", "events"]

[dependencies]
anchor-lang = "0.30.0"
anchor-i11n = { optional = true, version = "0.1.0"}